--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -193,19 +193,25 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="250dp"
                 android:layout_marginEnd="8dp"
-                android:text="Not login yet!"
+                android:textColor="#000"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="20dip"
+                android:text="Explore The Food World!"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="wrap_content"
+                android:layout_width="340dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Login"
+                android:background="@drawable/registerbutton"
+                android:text="Login Here"
+                android:textSize="16dip"
+                android:fontFamily="sans-serif-medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
