--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -66,6 +66,7 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_width="70dp"
         android:layout_height="match_parent" />
 </FrameLayout>
