--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
     <RelativeLayout
-        android:layout_weight="2"
+        android:layout_weight="1.3"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
@@ -16,8 +16,6 @@
             android:id="@+id/image_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="false"
             android:src="@mipmap/search" />
     </RelativeLayout>
 
@@ -25,12 +23,10 @@
         android:id="@+id/restaurant_grid"
         android:alignmentMode="alignMargins"
         android:columnOrderPreserved="false"
-        android:layout_weight="8"
+        android:layout_weight="8.7"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="14dp">
-
-
+        android:padding="3dp">
         <!--<android.support.v7.widget.CardView-->
             <!--android:layout_width="0dp"-->
             <!--android:layout_height="0dp"-->
@@ -232,10 +228,9 @@
         <!--</LinearLayout>-->
     <!--</android.support.v7.widget.CardView>-->
     </android.support.v7.widget.RecyclerView>
-
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:layout_gravity="center" />
 </LinearLayout>
