--- a/app/src/main/res/layout/fragment_voucher.xml
+++ b/app/src/main/res/layout/fragment_voucher.xml
@@ -13,6 +13,7 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
+        android:layout_gravity="center"
         android:layout_height="match_parent" />
 </FrameLayout>
