--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,25 +10,25 @@
     <RelativeLayout
         android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="false"
             android:src="@mipmap/search" />
-    </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/restaurant_grid"
-        android:alignmentMode="alignMargins"
-        android:columnOrderPreserved="false"
-        android:layout_weight="8"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="14dp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/restaurant_grid"
+            android:alignmentMode="alignMargins"
+            android:columnOrderPreserved="false"
+            android:layout_weight="8"
+            android:layout_below="@id/image_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="14dp" />
+
+    </RelativeLayout>
 
 
         <!--<android.support.v7.widget.CardView-->
@@ -231,11 +231,10 @@
                 <!--android:layout_height="wrap_content"/>-->
         <!--</LinearLayout>-->
     <!--</android.support.v7.widget.CardView>-->
-    </android.support.v7.widget.RecyclerView>
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center" />
-</LinearLayout>
+</FrameLayout>
