--- a/app/src/main/res/layout/payment_method.xml
+++ b/app/src/main/res/layout/payment_method.xml
@@ -2,5 +2,96 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <
+    <ImageView
+        android:id="@+id/msgbar"
+        android:background="@drawable/bargrey"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" />
+    <TextView
+        android:layout_marginTop="15dp"
+        android:text="Payment Method"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="22dip"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/choose_payment"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/bargrey"
+        android:layout_centerInParent="true"
+        android:layout_width="355dp"
+        android:layout_height="480dp" />
+    <ImageView
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="230dp"
+        android:layout_below="@id/msgbar"
+        android:background="@drawable/transferbank"
+        android:layout_width="100dp"
+        android:layout_height="90dp" />
+    <ImageView
+        android:layout_marginTop="110dp"
+        android:layout_marginLeft="230dp"
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/mobilebanking1"
+        android:layout_width="70dp"
+        android:layout_height="60dp" />
+    <ImageView
+        android:layout_marginTop="208dp"
+        android:layout_marginLeft="230dp"
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/virtualaccount"
+        android:layout_width="70dp"
+        android:layout_height="60dp" />
+    <ImageView
+        android:background="@drawable/mastercardvisa"
+        android:layout_below="@+id/msgbar"
+        android:layout_marginTop="290dp"
+        android:layout_marginLeft="230dp"
+        android:layout_width="90dp"
+        android:layout_height="60dp" />
+    <RadioGroup
+        android:layout_below="@+id/msgbar"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <RadioButton
+            android:id="@+id/transferbank"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="200dp"
+            android:text="Trasnfer Bank"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:layout_marginTop="50dp"
+            android:text="Mobile Banking"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:layout_marginTop="50dp"
+            android:text="Virtual Account"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginTop="50dp"
+            android:textStyle="bold"
+            android:text="Credit Card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RadioGroup>
 </RelativeLayout>
